fixed css and alignment for /allfarmers (allfarmers.handlebars)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -463,7 +463,10 @@ label {
     margin-top: 2em;
 }
 
-
+.farmercard {
+    max-height: 190px;
+    overflow: hidden;
+}
 
 
 /*Error CSS*/
